# qa-automation-portfolio

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
config/: config.py
tests/: conftest.py
tests/api/: conftest.py  test_petstore_pet.py
tests/ui/: conftest.py  test_saucedemo_login.py
tests/ui/pages/: login_page.py
utils/: api_client.py
